# hello-automation

./: .env.TEMPLATE  .envrc  Makefile  README.md  pyproject.toml
platform/: .envrc  action.yml  compute-envs.yml  credentials.yml  datastudio.md  e2e.yml  labels.yml  launch.yml  org.yaml  pipelines.yml  teams.yml  workspaces.yml
src/: README.md
src/hello_automation/: activities.py  config.py  run_worker.py  run_workflow.py  shared.py  workflows.py
src/slas2025/: activities.py  config.py  run_worker.py  run_workflow.py  workflows.py
terraform/: .gitignore  main.tf
